<resources>
    <string name="app_name">Sudoku</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="cancel">CANCEL</string>
    <string name="del">DEL</string>
    <string name="memo">Memo</string>
    <string name="delete">DELETE</string>
    <string name="ok">OK</string>
    <string name="input_number">Input Number</string>
    <string name="reset">RESET</string>
</resources>